--- a/egs/arctic/vc/conf/vc_from_scratch_taco2_v1.yaml
+++ b/egs/arctic/vc/conf/vc_from_scratch_taco2_v1.yaml
@@ -2,6 +2,8 @@
 # Furthermore, to accelerate the learning of diaogonal attention, we additionaly
 # use guided attention loss. This leads super fast and robust attention learning.
 
+model-module: espnet.nets.pytorch_backend.vc_tacotron2:Tacotron2
+
 # encoder related
 embed-dim: 512
 elayers: 1
@@ -36,15 +38,18 @@ reduction-factor: 1
 
 # minibatch related
 batch-sort-key: input # shuffle or input or output
-batch-bins: 1214400   # 32 * (870 * 80 + 180 * 35)
+batch-bins: 2227200    # 16 * (870 * 80 + 870 * 80) = 16 * 139200
                       # batch-size * (max_out * dim_out + max_in * dim_in)
-                      # resuling in 38 ~ 127 samples (avg 38 samples) in batch (330 batches per epochs) for ljspeech
 
 # optimization related
-lr: 1e-3
+lr: 1e-4
 eps: 1e-6
 weight-decay: 0.0
 dropout-rate: 0.5
 zoneout-rate: 0.1
-epochs: 200
+epochs: 10000
 patience: 0
+
+# other
+save-interval-epoch: 50
+eval-interval-epoch: 50
