--- a/egs/arctic/vc/conf/vc_v3_R2R2_ag1.yaml
+++ b/egs/arctic/vc/conf/vc_v3_R2R2_ag1.yaml
@@ -28,11 +28,12 @@ encoder-normalize-before: False
 decoder-normalize-before: False
 encoder-concat-after: False
 decoder-concat-after: False
-reduction-factor: 1
+reduction-factor: 2
+encoder-reduction-factor: 2
 
 # minibatch related
 batch-sort-key: input # shuffle or input or output
-batch-bins: 1113600    # 16 * (870 * 80 + 870 * 80) = 16 * 139200
+batch-bins: 2227200    # 16 * (870 * 80 + 870 * 80) = 16 * 139200
                       # batch-size * (max_out * dim_out + max_in * dim_in)
                       # resuling in 10 ~ 24 samples (avg 13 samples) in batch (969 batches per epochs) for ljspeech
 
@@ -56,11 +57,10 @@ use-guided-attn-loss: true
 num-heads-applied-guided-attn: 2
 num-layers-applied-guided-attn: 2
 modules-applied-guided-attn: ["encoder-decoder"]
-guided-attn-loss-lambda: 100
 
 # optimization related
 opt: noam
-accum-grad: 6
+accum-grad: 1
 grad-clip: 1.0
 weight-decay: 0.0
 patience: 0
