--- a/egs/m_ailabs/tts1/conf/tuning/train_pytorch_transformer.v1.single.R2.yaml
+++ b/egs/m_ailabs/tts1/conf/tuning/train_pytorch_transformer.v1.single.R2.yaml
@@ -67,3 +67,4 @@ epochs: 1000  # 1,000 epochs * 969 batches / 6 accum-grad = 161,500 iters
 
 # other
 save-interval-epoch: 10
+eval-interval-epoch: 10
